manifests/base/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: website
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - path: /blog/?(.*)
        backend:
          serviceName: website
          servicePort: 80
